--- a/3D_GUI.ui
+++ b/3D_GUI.ui
@@ -318,20 +318,40 @@
                 </widget>
                </item>
                <item row="3" column="0" colspan="2">
-                <spacer name="verticalSpacer">
-                 <property name="orientation">
-                  <enum>Qt::Vertical</enum>
+                <widget class="QTableWidget" name="UI_strain_table">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Expanding" vsizetype="Maximum">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
                  </property>
-                 <property name="sizeType">
-                  <enum>QSizePolicy::Expanding</enum>
+                 <property name="alternatingRowColors">
+                  <bool>true</bool>
                  </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>20</width>
-                   <height>40</height>
-                  </size>
+                 <property name="textElideMode">
+                  <enum>Qt::ElideRight</enum>
                  </property>
-                </spacer>
+                 <property name="rowCount">
+                  <number>4</number>
+                 </property>
+                 <property name="columnCount">
+                  <number>1</number>
+                 </property>
+                 <attribute name="horizontalHeaderVisible">
+                  <bool>false</bool>
+                 </attribute>
+                 <attribute name="horizontalHeaderStretchLastSection">
+                  <bool>true</bool>
+                 </attribute>
+                 <attribute name="verticalHeaderStretchLastSection">
+                  <bool>false</bool>
+                 </attribute>
+                 <row/>
+                 <row/>
+                 <row/>
+                 <row/>
+                 <column/>
+                </widget>
                </item>
               </layout>
              </widget>
@@ -451,7 +471,7 @@
      <x>0</x>
      <y>0</y>
      <width>1388</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
