--- a/3D_GUI.ui
+++ b/3D_GUI.ui
@@ -320,7 +320,7 @@
                <item row="3" column="0" colspan="2">
                 <widget class="QTableWidget" name="UI_strain_table">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+                  <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -332,7 +332,7 @@
                   <enum>Qt::ElideRight</enum>
                  </property>
                  <property name="rowCount">
-                  <number>4</number>
+                  <number>1</number>
                  </property>
                  <property name="columnCount">
                   <number>1</number>
@@ -347,9 +347,6 @@
                   <bool>false</bool>
                  </attribute>
                  <row/>
-                 <row/>
-                 <row/>
-                 <row/>
                  <column/>
                 </widget>
                </item>
@@ -361,6 +358,12 @@
          </item>
          <item>
           <widget class="QFrame" name="frame_4">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="frameShape">
             <enum>QFrame::StyledPanel</enum>
            </property>
@@ -471,7 +474,7 @@
      <x>0</x>
      <y>0</y>
      <width>1388</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
