--- a/3D_GUI.ui
+++ b/3D_GUI.ui
@@ -354,6 +354,11 @@
                  </attribute>
                  <row/>
                  <column/>
+                 <item row="0" column="0">
+                  <property name="text">
+                   <string>Strain Values</string>
+                  </property>
+                 </item>
                 </widget>
                </item>
                <item row="4" column="0" colspan="2">
