--- a/3D_GUI.ui
+++ b/3D_GUI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1388</width>
-    <height>844</height>
+    <height>862</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -335,7 +335,7 @@
                   <enum>Qt::ElideRight</enum>
                  </property>
                  <property name="rowCount">
-                  <number>1</number>
+                  <number>0</number>
                  </property>
                  <property name="columnCount">
                   <number>1</number>
@@ -347,18 +347,12 @@
                   <bool>true</bool>
                  </attribute>
                  <attribute name="verticalHeaderVisible">
-                  <bool>false</bool>
+                  <bool>true</bool>
                  </attribute>
                  <attribute name="verticalHeaderStretchLastSection">
                   <bool>false</bool>
                  </attribute>
-                 <row/>
                  <column/>
-                 <item row="0" column="0">
-                  <property name="text">
-                   <string>Strain Values</string>
-                  </property>
-                 </item>
                 </widget>
                </item>
                <item row="4" column="0" colspan="2">
@@ -535,7 +529,7 @@
      <x>0</x>
      <y>0</y>
      <width>1388</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
