--- a/3D_GUI.ui
+++ b/3D_GUI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1496</width>
-    <height>909</height>
+    <height>969</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -909,7 +909,7 @@
                    </widget>
                   </item>
                   <item>
-                   <widget class="QOpenGLWidget" name="Graph3_display"/>
+                   <widget class="PlotWidget" name="Graph3_display"/>
                   </item>
                  </layout>
                 </item>
@@ -1233,6 +1233,11 @@
    <class>GLViewWidget</class>
    <extends>QOpenGLWidget</extends>
    <header>pyqtgraph.opengl</header>
+  </customwidget>
+  <customwidget>
+   <class>PlotWidget</class>
+   <extends>QOpenGLWidget</extends>
+   <header>pyqtgraph</header>
   </customwidget>
  </customwidgets>
  <resources/>
